# introduction_ia_terminale

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/introduction_ia_terminale/dataset/: fake_news_dataset.py
src/introduction_ia_terminale/models/: fake_news_detector.py
src/introduction_ia_terminale/preprocessing/: fake_news_preprocessor.py
src/notebooks/: develop.ipynb  fake_news.ipynb
