[tool.poetry]
name = "introduction_ia_terminale"
version = "0.1.0"
description = "Introduction en intelligence artificielle pour les terminales"
license = "Proprietary"
authors = ["Loïc Baret <baret.loic.1@gmail.com>"]
readme = "README.md"
keywords = [
    "intelligence artificielle", "introduction", "terminale", "machine learning"
]
packages = [
    { include = "introduction_ia_terminale", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
torchvision = "^0.12.0"
kaggle = "^1.5.12"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
